--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
     "vux": "^2.9.2",
     "vux-loader": "^1.2.9"
   },
