--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
     "vux": "^2.9.2",
-    "vux-loader": "^1.2.9"
+    "vux-loader": "^1.2.9",
+    "web-storage-cache": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
