--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qs": "^6.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "url": "^0.11.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
