--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less-loader": "^4.1.0",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
+    "schart.js": "^2.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url": "^0.11.0",
@@ -25,6 +26,7 @@
     "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
+    "vue-schart": "^1.0.0",
     "vuex": "^3.1.0",
     "vux": "^2.9.2",
     "vux-loader": "^1.2.9",
