--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "better-scroll": "^1.14.1",
+    "echarts": "^4.2.1",
     "fastclick": "^1.0.6",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -20,6 +21,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url": "^0.11.0",
+    "v-charts": "^1.19.0",
     "vconsole": "^3.3.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
