--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "better-scroll": "^1.14.1",
     "echarts": "^4.2.1",
     "fastclick": "^1.0.6",
+    "happypack": "^5.0.1",
+    "js-base64": "^2.5.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "nprogress": "^0.2.0",
